	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Resource.h
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13.cpp
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13.fx
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13.jpg
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13.rc
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13_2003.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13_2003.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13_2005.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/Tutorial13_2005.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial13/directx.ico
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Resource.h
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14.cpp
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14.fx
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14.jpg
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14.rc
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2003.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2003.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2005.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2005.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/directx.ico

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/02.18_15_29.27.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial09/Tutorial09.cpp
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial10/Tutorial10.cpp
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial11/Tutorial11.fx
