@@ -4592,3 +4592,14 @@ Changes to be committed:
 	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial10/Tutorial10.cpp
 	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial11/Tutorial11.fx
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/11/06.15_26_24.99.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
